--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <li class="cabecalho-lista-item">arts</li>
     </ul>
    </header>
-
+<section class="escola">
+    <h2 class="gorillaz-titulo">Gorillaz</h2>
+    <p class="gorillaz-texto-1">Gorillaz é uma banda virtual criada em 1998 por Damon Albarn, mais conhecido por ser o vocalista do Blur, e pelo artista Jamie Hewlett, co-criador da história em quadrinhos Tank Girl. </p>
+    <p class="gorillaz-texto-2"> Gênero: Conhecido por seu som inovador, misturando elementos de rock alternativo, hip-hop, música eletrônica e muito mais.</p>
+</section>
 </body>
 </html>
