--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
     </ul>
    </header>
 <section class="escola">
-    <h2 class="gorillaz-titulo">Gorillaz</h2>
-    <p class="gorillaz-texto-1">Gorillaz é uma banda virtual criada em 1998 por Damon Albarn, mais conhecido por ser o vocalista do Blur, e pelo artista Jamie Hewlett, co-criador da história em quadrinhos Tank Girl. </p>
-    <p class="gorillaz-texto-2"> Gênero: Conhecido por seu som inovador, misturando elementos de rock alternativo, hip-hop, música eletrônica e muito mais.</p>
+    <div class="escola-div-conteudo">
+        <h2 class="gorillaz-titulo">Gorillaz</h2>
+        <p class="gorillaz-texto-1">Gorillaz é uma banda virtual criada em 1998 por Damon Albarn, mais conhecido por ser o vocalista do Blur, e pelo artista Jamie Hewlett, co-criador da história em quadrinhos Tank Girl. </p>
+        <p class="gorillaz-texto-2"> Gênero: Conhecido por seu som inovador, misturando elementos de rock alternativo, hip-hop, música eletrônica e muito mais.</p>
+     
+    </div>
+    <img class="Gorillaz-imagem" src="TGTgorillaz.png" alt="foto de todos.">
 </section>
 </body>
 </html>
