--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link class="indie-flower-regular"    href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,10 +23,14 @@
    </header>
 <section class="escola">
     <div class="escola-div-conteudo">
-        <h2 class="gorillaz-titulo">Gorillaz</h2>
-        <p class="gorillaz-texto-1">Gorillaz é uma banda virtual criada em 1998 por Damon Albarn, mais conhecido por ser o vocalista do Blur, e pelo artista Jamie Hewlett, co-criador da história em quadrinhos Tank Girl. </p>
-        <p class="gorillaz-texto-2"> Gênero: Conhecido por seu som inovador, misturando elementos de rock alternativo, hip-hop, música eletrônica e muito mais.</p>
-     
+        <h2 class="gorillaz-titulo"> Origem</h2>
+        <p class="gorillaz-texto"> Formada em 1998 pelo músico Damon Albarn (vocalista do Blur) e pelo cartunista Jamie Hewlett (co-criador da Tank Girl). </p>
+        <p class="gorillaz-texto"> Conceito inovador de banda virtual com personagens animados.</p>
+        <h2 class="gorillaz-titulo">Membros:</h2>
+        <p class="gorillaz-texto">2-D: Vocalista, tímido e introvertido.</p>
+        <p class="gorillaz-texto">Murdoc Niccals: Baixista, cínico e sarcástico.</p>
+        <p class="gorillaz-texto">Noodle: Guitarrista, misteriosa e habilidosa.</p>
+        <p class="gorillaz-texto">Russel Hobbs: Baterista, calmo e espiritual.</p>
     </div>
     <img class="Gorillaz-imagem" src="TGTgorillaz.png" alt="foto de todos.">
 </section>
