--- a/index.html
+++ b/index.html
@@ -34,5 +34,34 @@
     </div>
     <img class="Gorillaz-imagem" src="TGTgorillaz.png" alt="foto de todos.">
 </section>
+
+<section class="estudante">
+    <div class="estudante-todos">
+           <h2 class="estudante-titulo">Os Gorillaz</h2> 
+        
+<div class="estudante-div">
+   <img class="imagem-estudante" src="2D.png" alt="foto do 2d">
+   <h3>2-D</h3>
+</div>
+<span></span>
+
+<div class="estudante-div">
+    <img class="imagem-estudante" src="murdoc.png" alt="foto do 2d">
+    <h3>Murdoc</h3>
+ </div>
+ <span></span>
+ <span></span>
+ <div class="estudante-div">
+    <img class="imagem-estudante" src="noodle.png" alt="foto do 2d">
+    <h3>Noodle</h3>
+ </div>
+ <span></span>
+ <span></span>
+ <div class="estudante-div">
+    <img class="imagem-estudante" src="Russel.png" alt="foto do 2d">
+    <h3>Russel</h3>
+ </div>
+
+</section>
 </body>
 </html>
