--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
  </div>
 
 </section>
+<footer class="rodape">
+<img class="rodape-imagem" src="Gorillaz_logo.svg.png" alt="logo-dos-Gorillaz">
+</footer>
 </body>
 </html>
