--- a/index.html
+++ b/index.html
@@ -1,70 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
+    <title>Alura Plus</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link class="indie-flower-regular"    href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <section class="principal container">
+        <div class="container__caixa">
+            <h1 class="container__titulo">Bem vindo ao PlayStation Lair, aqui você vai descobrir ou relembrar uma parte da hisoria do PlayStation 2.</h1>
+            <a href="https://pt.wikipedia.org/wiki/PlayStation_2" class="container__botao">clique aqui para um breve resumo</a>
+        </div>
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Apesar do lançamento tardio, o PlayStation 2 conquistou o coração dos brasileiros. Com um catálogo de jogos extenso e diversificado, o console proporcionou horas de diversão para milhões de pessoas. Títulos como Grand Theft Auto: San Andreas, God of War e Metal Gear Solid 2: Sons of Liberty marcaram gerações e se tornaram clássicos atemporais.</p>
+        </div>
+    </section>
+
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">
+                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
+                tecnologia e aprender inglês ou espanhol, onde e como quiser.
+            </p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+        </div>
+        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+            class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
+        </div>
+    </section>
     
-   <header class="cabecalho">
-   <img class="cabecalho-imagem" src="Gorillaz_logo.svg.png" alt="Gorillaz_logo">
-    <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">music</li>
-        <li class="cabecalho-lista-item">arts</li>
-    </ul>
-   </header>
-<section class="escola">
-    <div class="escola-div-conteudo">
-        <h2 class="gorillaz-titulo"> Origem</h2>
-        <p class="gorillaz-texto"> Formada em 1998 pelo músico Damon Albarn (vocalista do Blur) e pelo cartunista Jamie Hewlett (co-criador da Tank Girl). </p>
-        <p class="gorillaz-texto"> Conceito inovador de banda virtual com personagens animados.</p>
-        <h2 class="gorillaz-titulo">Membros:</h2>
-        <p class="gorillaz-texto">2-D: Vocalista, tímido e introvertido.</p>
-        <p class="gorillaz-texto">Murdoc Niccals: Baixista, cínico e sarcástico.</p>
-        <p class="gorillaz-texto">Noodle: Guitarrista, misteriosa e habilidosa.</p>
-        <p class="gorillaz-texto">Russel Hobbs: Baterista, calmo e espiritual.</p>
-    </div>
-    <img class="Gorillaz-imagem" src="TGTgorillaz.png" alt="foto de todos.">
-</section>
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="img/tv.png" alt="Ícone de televisão">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="img/computador.png" alt="Ícone de computador">
+                <h3 class="lista__item">Computador</h3>
+            </li>
+            <li>
+                <img src="img/celular.png" alt="Ícone de celular">
+                <h3 class="lista__item">Celular</h3>
+            </li>
+        </ul>
+    </section>
 
-<section class="estudante">
-    <div class="estudante-todos">
-           <h2 class="estudante-titulo">Os Gorillaz</h2> 
-        
-<div class="estudante-div">
-   <img class="imagem-estudante" src="2D.png" alt="foto do 2d">
-   <h3>2-D</h3>
-</div>
-<span></span>
-
-<div class="estudante-div">
-    <img class="imagem-estudante" src="murdoc.png" alt="foto do 2d">
-    <h3>Murdoc</h3>
- </div>
- <span></span>
- <span></span>
- <div class="estudante-div">
-    <img class="imagem-estudante" src="noodle.png" alt="foto do 2d">
-    <h3>Noodle</h3>
- </div>
- <span></span>
- <span></span>
- <div class="estudante-div">
-    <img class="imagem-estudante" src="Russel.png" alt="foto do 2d">
-    <h3>Russel</h3>
- </div>
-
-</section>
-<footer class="rodape">
-<img class="rodape-imagem" src="Gorillaz_logo.svg.png" alt="logo-dos-Gorillaz">
-</footer>
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <ul class="rodape__lista">
+            <li class="lista__link">
+                <a href="#">Idioma</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Dispositivos compatíveis</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Contrato de assinatura</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Politica de privacidade</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Proteção de dados no Brasil</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Anuncios personalizados</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de
+            assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
+            serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
+            Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
+
 </html>
